<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- content header line -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alwaysDrawnWithCache="false"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:hapticFeedbackEnabled="false"
        android:paddingBottom="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="NL95 ABNA 0446 9080 45"
            android:textColor="@color/contentDividerLine"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_icon" />

    </RelativeLayout>

    <!-- content header image -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/pic2" />

        <TextView
            android:id="@+id/head_image_center_text"
            style="@style/ContentImageBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/head_image"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

    <!-- content body layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgContent"
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="9dp">

        <!-- avatar and name part -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/arrow"
                android:id="@+id/imageView2" />

            <TextView
                android:id="@+id/textView2"
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"


                android:text="#ACCOUNTS"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/acccoutn"
                style="@style/ContentImageBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mainTextColor"
                android:layout_marginTop="17dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:text="2"
                 />

            <TextView
                android:id="@+id/head_image_right_below"
                style="@style/ContentImageBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="17dp"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:text="€ 75000"
                android:textColor="@color/mainTextColor" />

            <TextView
                android:id="@+id/head_image_right_text"
                style="@style/ContentImageBadgeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/head_image_right_below"
                android:layout_alignBottom="@+id/head_image_right_below"
                android:layout_alignRight="@+id/imageView2"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:text="€ 25000"
                android:textColor="@color/mainTextColor" />

            <TextView
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/head_image_right_text"
                android:layout_alignStart="@+id/head_image_right_text"
                android:text="AVAILABLE"

                android:textStyle="bold" />

            <TextView
                style="@style/ContentMainBadgeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView2"
                android:paddingStart="20dp"
                android:text="GOAL"

                android:textStyle="bold" />

        </RelativeLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="9dp"
            android:src="@color/contentDividerLine" />

        <!-- addresses part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_from_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/from_badge" />

                <TextView
                    android:id="@+id/content_from_address_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_from_badge"
                    android:layout_below="@id/content_from_badge"
                    android:text="@string/content_from1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_from_address_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_from_address_1"
                    android:layout_below="@id/content_from_address_1"
                    android:text="@string/content_from2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_to_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/to_badge" />

                <TextView
                    android:id="@+id/content_to_address_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_to_badge"
                    android:layout_below="@id/content_to_badge"
                    android:text="@string/content_to1_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_to_address_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_to_address_1"
                    android:layout_below="@id/content_to_address_1"
                    android:text="@string/content_to2_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/arrow" />

            </RelativeLayout>

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="7dp"
            android:src="@color/contentDividerLine" />

        <!-- dates part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_delivery_date_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/delivery_date_badge" />

                <TextView
                    android:id="@+id/content_delivery_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_delivery_date_badge"
                    android:layout_below="@id/content_delivery_date_badge"
                    android:text="@string/delivery_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_delivery_time"
                    android:layout_below="@id/content_delivery_time"
                    android:text="@string/delivery_date_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/content_deadline_badge"
                    style="@style/ContentMainBadgeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/deadline_badge" />

                <TextView
                    android:id="@+id/content_deadline_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_deadline_badge"
                    android:layout_below="@id/content_deadline_badge"
                    android:text="@string/deadline_time_mock"
                    android:textColor="@color/mainTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/content_deadline_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/content_deadline_time"
                    android:layout_below="@id/content_deadline_time"
                    android:text=""
                    android:textColor="@color/mainTextColor"
                    android:textSize="14sp" />
            </RelativeLayout>

        </LinearLayout>

        <!-- request button -->
        <TextView
            android:id="@+id/content_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/btnRequest"
            android:padding="10dp"
            android:text="@string/request_btn_text"
            android:textAlignment="center"
            android:textColor="@color/mainTextColor"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/btn_annotation_mock"
            android:textAlignment="center"
            android:textColor="@color/contentBadgeTitle"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>